# ds_skeleteon_ga_1

./: README.md
.github/workflows/: ci.yml
api/: .env.example  Makefile  conftest.py  manage.py  pyproject.toml
api/ds_skeleteon_ga_1/: asgi.py  celery.py  urls.py  wsgi.py
api/ds_skeleteon_ga_1/apps/accounts/: admin.py  apps.py  selectors.py
api/ds_skeleteon_ga_1/apps/accounts/api/v1/: urls.py
api/ds_skeleteon_ga_1/apps/accounts/api/v1/serializers/: password.py  registration.py  user_profile.py
api/ds_skeleteon_ga_1/apps/accounts/api/v1/views/: login.py  password.py  registration.py  user_profile.py
api/ds_skeleteon_ga_1/apps/accounts/models/: user_account.py
api/ds_skeleteon_ga_1/apps/accounts/services/: password.py
api/ds_skeleteon_ga_1/apps/accounts/tests/: test_api_permissions.py
api/ds_skeleteon_ga_1/apps/accounts/tests/test_api/: test_login_api.py  test_logout_api.py  test_registration_api.py
api/ds_skeleteon_ga_1/apps/accounts/tests/test_models/: test_user_model.py
api/ds_skeleteon_ga_1/apps/accounts/tests/test_selectors/: test_get_users_selector.py
api/ds_skeleteon_ga_1/apps/accounts/tests/test_serializers/: test_change_password_serializer.py  test_confirm_reset_password_serializer.py  test_login_serializer.py  test_registration_serializer.py  test_reset_password_serializer.py
api/ds_skeleteon_ga_1/apps/accounts/tests/test_services/: test_login_service.py  test_password_service.py
api/ds_skeleteon_ga_1/apps/common/: apps.py
api/ds_skeleteon_ga_1/settings/: __init__.py  django.py  ds_skeleteon_ga_1.py
api/ds_skeleteon_ga_1/settings/contrib/: celery.py  redis.py  rest_framework.py  sentry.py  swagger.py
docker/: docker-compose.yml
docker/images/api/: Dockerfile
docker/images/api/files/: entrypoint.sh
docs/: architecture_overview.md  commands.md  pre_commit_hook.md
